sandbox/output
OneHundredDoorsTest.java:13: error: cannot find symbol
        assertEquals("O", oneHundredDoors.statesOfDoorsAfterPassingPartialDoors(1));
                                         ^
  symbol:   method statesOfDoorsAfterPassingPartialDoors(int)
  location: variable oneHundredDoors of type OneHundredDoors
1 error
